# codex-atlas-reference

./: .gitignore  README.html  README.md  codex-atlas-reference-0.1.0-civil-war.5.tar.gz.sha256  codex-atlas-reference-0.2.0-pre-civil-war.1.tar.gz.sha256  codex-atlas-reference-0.3.0-post-reconstruction-42-79.1.tar.gz.sha256  codex-atlas-reference-0.3.1-holders-1-79.1.tar.gz.sha256  manifest.json  quickstart.txt
.cursor/rules/: codex-suite-operating-guardrails.mdc
.github/workflows/: codex-reference-ci.yml
deploy/tools/: README.md  pyproject.toml
deploy/tools/codex_reference_ci/: __init__.py  athena_venv.py  build_bundle.py  manifest.py  pipeline.py  release.py  repo.py  suite_pin_sync.py  unit_tests.py  validate.py
packs/us_holders_house/: congress_001.json  congress_002.json  congress_003.json  congress_004.json  congress_005.json  congress_006.json  congress_007.json  congress_008.json  congress_009.json  congress_010.json  congress_011.json  congress_012.json  congress_013.json  congress_014.json  congress_015.json  congress_016.json  congress_017.json  congress_018.json  congress_019.json  congress_020.json  congress_021.json  congress_022.json  congress_023.json  congress_024.json  congress_025.json  congress_026.json  congress_027.json  congress_028.json  congress_029.json  congress_030.json  congress_031.json  congress_032.json  congress_033.json  (+91 more)
schemas/: reference-bundle.schema.json  reference-slice.schema.json
scripts/: with_athena_venv.py
tests/: test_build_bundle.py  test_validate_reference_bundle.py
tools/: validate_reference_bundle.py
